0.28_dev
-update jpanel with event handling that registers appropriate mouse position.
-add time.set_timer method.
-update display repaint to sync with program iteration.

0.27    2015-04-12
-update font to enhance fonts access.
-update image load to allow file-like argument.
-update draw methods to int convert argument.
-add mask.toString method.
-add rect iter method.
-add rect collide methods - collidelistall, collidedict, and collidedictall.
-add sprite collide methods - collide_rect_ratio, collide_circle, and collide_circle_ratio.
-add mousewheel event listener.
-released under MIT license.

0.26    2014-11-09
-add rect union methods.
-update methods to use rect intersection.
-update surface blit rect computation.
-update initialization to stabilize timing.
-add rect rectPool to utilize a rect pool.
-update sprite draw for performance.
-update sprite collide methods processing.
-add rect clamp methods.
-update mixer write for non-integral frames.
-update mixer quit to properly stop thread.
-add mouse set_visible method.

0.25    2014-08-20
-update mixer thread interrupt.
-update handling of display surface graphics2d object.
-update display.set_mode to accept additional arguments.
-add display set_caption/set_icon to set JFrame title/icon.
-add display.get_active method.
-update event object constructor to properly handle arguments.
-add key.get_mods method.
-update mouse.get_pressed to properly return state of all buttons.
-restructured event handler to capture all mouse motion events.
-add event member buttons.
-change event key location to event.loc (KEY_LOCATION_LEFT|RIGHT|STANDARD|NUMPAD|UNKNOWN).
-correct event.pump to maintain queue.
-add event.dict access.
-update mouse.get_rel process on frame exit.
-update event.rel to properly return with multiple access.
-update event modKey set to use Java HashSet with earlier Jython releases, defined in __init__.py (HashSet not sets import due to compile problem).
-update event eventtype list as a set object.